Update print statement from 'Hello' to 'Goodbye'
Signed-off-by: lucas-sysa <crocettilucas@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Stock</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,7 +13,9 @@
             height: 100vh;
             align-items: center;
             justify-content: center;
+            margin: 0;
         }
+
         .form-container {
             background: #fff;
             padding: 30px 40px;
@@ -21,11 +24,13 @@
             width: 100%;
             max-width: 400px;
         }
+
         .form-container h2 {
             text-align: center;
             margin-bottom: 20px;
             color: #333;
         }
+
         input {
             width: 100%;
             padding: 10px 12px;
@@ -34,10 +39,12 @@
             border-radius: 8px;
             transition: border-color 0.3s;
         }
+
         input:focus {
             border-color: #74ebd5;
             outline: none;
         }
+
         button {
             background-color: #e0e0e0;
             border: 1px solid #ccc;
@@ -46,41 +53,47 @@
             font: inherit;
             border-radius: 4px;
             cursor: pointer;
+            width: 100%;
         }
+
         button:hover {
             background-color: #d5d5d5;
         }
     </style>
 </head>
 <body>
-    <div class="form-container">
-        <h2>Gestión de Stock</h2>
-        <form id="form">
-            <input placeholder="Escanear tarjeta del operador" id="usuario" required autofocus>
-            <input placeholder="Código" id="codigo" required>
-            <input placeholder="Descripción" id="descripcion" required readonly>
-            <input type="number" placeholder="Entrada de stock" id="entrada">
-            <input type="number" placeholder="Salida de stock" id="salida">
-            <input placeholder="Rack" id="rack" required>
-            <input placeholder="Box" id="box" required>
-            <button type="submit">Enviar</button>
-        </form>
-    </div>
 
-    <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwuGhs-amfg4nz5hL-Ww6lH99k7BG4DDb1vlrgbFoIh5sJeRo_RxQvsFVYLd_bErUPW/exec';
+<div class="form-container">
+    <h2>Gestión de Stock</h2>
 
-        const entradaInput = document.getElementById('entrada');
-        const salidaInput = document.getElementById('salida');
+    <form id="form">
+        <input placeholder="Escanear tarjeta del operador" id="usuario" required autofocus>
+        <input placeholder="Código" id="codigo" required>
+        <input placeholder="Descripción" id="descripcion" required readonly>
+        <input type="number" placeholder="Entrada de stock" id="entrada">
+        <input type="number" placeholder="Salida de stock" id="salida">
+        <input placeholder="Rack" id="rack" required>
+        <input placeholder="Box" id="box" required>
+        <button type="submit">Enviar</button>
+    </form>
+</div>
 
-        entradaInput.addEventListener('input', () => {
-            salidaInput.disabled = entradaInput.value !== "";
-        });
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwuGhs-amfg4nz5hL-Ww6lH99k7BG4DDb1vlrgbFoIh5sJeRo_RxQvsFVYLd_bErUPW/exec';
 
-        salidaInput.addEventListener('input', () => {
-            entradaInput.disabled = salidaInput.value !== "";
-        });
+    const entradaInput = document.getElementById('entrada');
+    const salidaInput = document.getElementById('salida');
 
+    // Bloqueo automático: si se escribe en entrada, bloqueo salida y viceversa.
+    entradaInput.addEventListener('input', () => {
+        salidaInput.disabled = entradaInput.value !== "";
+    });
+
+    salidaInput.addEventListener('input', () => {
+        entradaInput.disabled = salidaInput.value !== "";
+    });
+
+    // Base de datos interna de códigos
 const productos = {
 "MPR36":"PORTA TABLERO NUEVO (A) HOMOPOLÍMERO",
 "MPR36-":"PORTA TABLERO PP",
@@ -396,61 +409,66 @@ const productos = {
 "299066570000":"REGULADOR DE VOLTAJE",
     };
 
-document.getElementById('codigo').addEventListener('input', function () {
-    const codigoIngresado = this.value.trim().toUpperCase();
-    const descripcion = productos[codigoIngresado];
-    document.getElementById('descripcion').value = descripcion || '';
-    
-    if (!descripcion && codigoIngresado.length > 3) {
-        document.getElementById('descripcion').placeholder = 'Código no reconocido';
-    } else {
-        document.getElementById('descripcion').placeholder = 'Descripción';
-    }
-});
+    // Auto-completa descripción desde el código
+    document.getElementById('codigo').addEventListener('input', function () {
+        const codigoIngresado = this.value.trim().toUpperCase();
+        const descripcion = productos[codigoIngresado];
 
-        document.getElementById('form').addEventListener('submit', e => {
-            e.preventDefault();
+        const descInput = document.getElementById('descripcion');
+        descInput.value = descripcion || '';
 
-            const entradaValue = entradaInput.value.trim();
-            const salidaValue = salidaInput.value.trim();
+        descInput.placeholder = (!descripcion && codigoIngresado.length > 3)
+            ? 'Código no reconocido'
+            : 'Descripción';
+    });
 
-            if (entradaValue === "" && salidaValue === "") {
-                alert("Debes ingresar una entrada o una salida de stock.");
-                return;
+    // Enviar formulario
+    document.getElementById('form').addEventListener('submit', e => {
+        e.preventDefault();
+
+        const entradaValue = entradaInput.value.trim();
+        const salidaValue = salidaInput.value.trim();
+
+        if (entradaValue === "" && salidaValue === "") {
+            alert("Debes ingresar una entrada o una salida de stock.");
+            return;
+        }
+
+        let salidaNegativa = "0";
+
+        if (salidaValue) {
+            salidaNegativa = "-" + Math.abs(parseInt(salidaValue));
+            const confirmarSalida = confirm(`Vas a registrar una salida de ${salidaNegativa} unidades. ¿Confirmás?`);
+            if (!confirmarSalida) return;
+        }
+
+        const data = {
+            usuario: document.getElementById('usuario').value,
+            codigo: document.getElementById('codigo').value,
+            descripcion: document.getElementById('descripcion').value,
+            entrada: entradaValue || "0",
+            salida: salidaNegativa,
+            rack: document.getElementById('rack').value,
+            box: document.getElementById('box').value
+        };
+
+        fetch(scriptURL, {
+            method: 'POST',
+            body: JSON.stringify(data),
+            mode: 'no-cors',
+            headers: {
+                'Content-Type': 'application/json'
             }
+        })
+        .then(() => {
+            alert('Datos enviados correctamente');
+            document.getElementById('form').reset();
+            entradaInput.disabled = false;
+            salidaInput.disabled = false;
+        })
+        .catch(error => alert('Error al enviar: ' + error.message));
+    });
+</script>
 
-            let salidaNegativa = "0";
-            if (salidaValue) {
-                salidaNegativa = `-${Math.abs(parseInt(salidaValue))}`;
-                const confirmarSalida = confirm(`Vas a registrar una salida de ${salidaNegativa} unidades. ¿Confirmás?`);
-                if (!confirmarSalida) return;
-            }
-
-const data = {
-    usuario: document.getElementById('usuario').value, 
-    codigo: document.getElementById('codigo').value,
-    descripcion: document.getElementById('descripcion').value,
-    entrada: entradaValue || "0",
-    salida: salidaNegativa,
-    rack: document.getElementById('rack').value,
-    box: document.getElementById('box').value
-};
-
-            fetch(scriptURL, {
-                method: 'POST',
-                body: JSON.stringify(data),
-                mode: 'no-cors',
-                headers: { 'Content-Type': 'application/json' }
-            })
-            .then(() => {
-                alert('Datos enviados correctamente');
-                document.getElementById('form').reset();
-                entradaInput.disabled = false;
-                salidaInput.disabled = false;
-            })
-            .catch(error => alert('Error al enviar: ' + error.message));
-        });
-    </script>
 </body>
 </html>
-
