--- a/index.html
+++ b/index.html
@@ -378,6 +378,17 @@ const productos = {
 "GDP":"MATERIAL RETENIDA GDP",
 "VARIOS":"MATERIAL VARIOS",
 "MPR216C":"Tapa y cuerpo de caja de herram. mas cerradura",
+"MPR46SC":"CUBRECADENAS (A)",
+"MPR15SC":"TAPA BATERÍA ALTA",
+"MPR16SC":"TAPA DE CERRADURA (A)",
+"MPR401SC":"ENTRADA SUPERIOR DE AIRE",
+"MPR216SC":"Tapa y cuerpo de caja de herram.",
+"MPR216CSC":"Tapa y cuerpo de caja de herram. mas cerradura",
+"MPR408SC":"Cerradura de caja de herram.",
+"MPR214SC":"Cubrecadenas",
+"MPR212SC":"Guia de cadena",
+"MPR213SC":"Decoracion de porta optica",
+"MPR365SC":"Decoracion de porta optica",
 "299064010000-INT":"REGULADOR VOLTAJE (2644)",
 "299066060000-INT":"REGULADOR VOLTAJE (2426)",
 "299066080010-INT":"REGULADOR VOLTAJE (N) (2649)",
@@ -472,3 +483,4 @@ const productos = {
 
 </body>
 </html>
+
