--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ const productos = {
 "MPR511":"ESPUMA DE ASIENTO SC150RE",
 "GDP":"MATERIAL RETENIDA GDP",
 "VARIOS":"MATERIAL VARIOS",
-"MPR216C":"Tapa y cuerpo de caja de herram. mas cerradura",
+"MPR216SC":"Tapa y cuerpo de caja de herram. mas cerradura",
 "MPR46SC":"CUBRECADENAS (A)",
 "MPR15SC":"TAPA BATERÍA ALTA",
 "MPR16SC":"TAPA DE CERRADURA (A)",
@@ -389,6 +389,7 @@ const productos = {
 "MPR212SC":"Guia de cadena",
 "MPR213SC":"Decoracion de porta optica",
 "MPR365SC":"Decoracion de porta optica",
+"MPR10SC":"POLLERA (B)",
 "299064010000-INT":"REGULADOR VOLTAJE (2644)",
 "299066060000-INT":"REGULADOR VOLTAJE (2426)",
 "299066080010-INT":"REGULADOR VOLTAJE (N) (2649)",
@@ -483,4 +484,5 @@ const productos = {
 
 </body>
 </html>
+
 
