--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ const productos = {
 "MPR385":"Guardabarro delantero (NEGRO) ABS",
 "MPR386":"Lateral derecho (NEGRO) ABS",
 "MPR387":"Lateral izquierdo (NEGRO) ABS",
+"MPR216C":"Tapa y cuerpo de caja de herramientas mas cerradura skua 150",
 "FILT444":"FILTRO ARMADO (entada superior de aire + cuerpo de filtro + tapa filtro)",
 "AMB11001-T":"ASIENTO MOTOMEL BLITZ",
 "AMB11002-T":"ASIENTO MOTOMEL BLITZ TUNNING",
@@ -483,6 +484,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
