--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@ const productos = {
 "AIDURBAN150-T":"ASIENTO DURBAN 150",
 "ASORBITIII-T":"ASIENTO ORBIT III 125",
 "ASJETX200-T":"ASIENTO JET X",
+"AMBPT1002VX1-T":"ASIENTO DELANTERO T1002VX",
+"AMBPT1002VX2-T":"ASIENTO TRASERO T1002VX",
+"AMLLIG155-T":"ASIENTO LIGURIA 155",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -484,6 +487,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
