--- a/index.html
+++ b/index.html
@@ -304,6 +304,8 @@ const productos = {
 "AMBPT1002VX1-T":"ASIENTO DELANTERO T1002VX",
 "AMBPT1002VX2-T":"ASIENTO TRASERO T1002VX",
 "AMLLIG155-T":"ASIENTO LIGURIA 155",
+"ATRAIDER1251-T":"ASIENTO TRASERO",
+"ATRAIDER125-T":"ASIENTO DELANTERO",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -487,6 +489,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
