--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@ const productos = {
 "AMLLIG155-T":"ASIENTO LIGURIA 155",
 "ATRAIDER1251-T":"ASIENTO TRASERO",
 "ATRAIDER125-T":"ASIENTO DELANTERO",
+"AB302S-T":"ASIENTO 302S",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -489,6 +490,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
