--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@ const productos = {
 "ATRAIDER1251-T":"ASIENTO TRASERO",
 "ATRAIDER125-T":"ASIENTO DELANTERO",
 "AB302S-T":"ASIENTO 302S",
+"ATRTR160-T":"ASIENTO RTR160",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -490,6 +491,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
