--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@ const productos = {
 "ATRAIDER125-T":"ASIENTO DELANTERO",
 "AB302S-T":"ASIENTO 302S",
 "ATRTR160-T":"ASIENTO RTR160",
+"ATNEO110NX":"ASIENTO TVS NEO 110",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -491,3 +492,4 @@ const productos = {
 
 </body>
 </html>
+
