--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ const productos = {
 "MPR387":"Lateral izquierdo (NEGRO) ABS",
 "MPR216C":"Tapa y cuerpo de caja de herramientas mas cerradura skua 150",
 "FILT444":"FILTRO ARMADO (entada superior de aire + cuerpo de filtro + tapa filtro)",
+"MPR12B":"BAULERA (B)", 
 "AMB11001-T":"ASIENTO MOTOMEL BLITZ",
 "AMB11002-T":"ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T":"ASIENTO MOTOMEL BLITZ PLUS",
@@ -492,4 +493,5 @@ const productos = {
 
 </body>
 </html>
+
 
