--- a/index.html
+++ b/index.html
@@ -310,6 +310,15 @@ const productos = {
 "AB302S-T":"ASIENTO 302S",
 "ATRTR160-T":"ASIENTO RTR160",
 "ATNEO110NX":"ASIENTO TVS NEO 110",
+"ATRTR2004V1-T":"ASIENTO TVS RTR200 DEL.",
+"ATRTR2004V-T":"ASIENTO TVS RTR200 TR.",
+"AMBPN3001-T":"ASIENTO MB N300 DEL.",
+"AMBPN3002-T":"ASIENTO MB N300 TR.",
+"AMBPT250X-T":"ASIENTO MB T250X",
+"AMBPM502N1-T":"ASIENTO MB M502N DEL.",
+"AMBPM502N2-T":"ASIENTO MB M502N TR.",
+"ATRTR200EFI1-T":"ASIENTO RTR 200 EFI DELANTERO",
+"ATRTR200EFI-T":"ASIENTO RTR 200 EFI TRASERO",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -493,5 +502,6 @@ const productos = {
 
 </body>
 </html>
+
 
 
