--- a/index.html
+++ b/index.html
@@ -250,6 +250,11 @@ const productos = {
 "MPR216C":"Tapa y cuerpo de caja de herramientas mas cerradura skua 150",
 "FILT444":"FILTRO ARMADO (entada superior de aire + cuerpo de filtro + tapa filtro)",
 "MPR12B":"BAULERA (B)", 
+"MPR562":"Cubrebarral (CELESTE)",
+"MPR564":"Escudo (CELESTE)",
+"MPR566":"Porta optica (CELESTE)",
+"MPR568":"Guardabarro delantero (CELESTE)",
+"MPR570":"Lateral I/D (CELESTE)",
 "AMB11001-T":"ASIENTO MOTOMEL BLITZ",
 "AMB11002-T":"ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T":"ASIENTO MOTOMEL BLITZ PLUS",
@@ -502,6 +507,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
