--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ const productos = {
 "MPR46":"CUBRECADENAS (A)",
 "MPR11":"GUARDABARROS TRASERO (A) BLITZ",
 "MPR394":"BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
+"MPR394-":"BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
 "MPR128":"BASE DE ASIENTOS",
 "MPR10":"POLLERA (B)",
 "MPR395":"POLLERA (A) PLÁSTICOS NACIONALES",
@@ -507,6 +508,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
