--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@ const productos = {
 "MPR387":"Lateral izquierdo (NEGRO) ABS",
 "MPR216C":"Tapa y cuerpo de caja de herramientas mas cerradura skua 150",
 "FILT444":"FILTRO ARMADO (entada superior de aire + cuerpo de filtro + tapa filtro)",
-"MPR12B":"BAULERA (B)", 
+"MPR12B":"BAULERA (B)",
+"MPR128SC":"BASE DE ASIENTOS",
+"MPR36SC":"PORTA TABLERO NUEVO (A) HOMOPOLÍMERO",
 "MPR562":"Cubrebarral (CELESTE)",
 "MPR564":"Escudo (CELESTE)",
 "MPR566":"Porta optica (CELESTE)",
@@ -508,6 +510,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
