--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@ const productos = {
 "FILT444":"FILTRO ARMADO (entada superior de aire + cuerpo de filtro + tapa filtro)",
 "MPR12B":"BAULERA (B)",
 "MPR317-":"Guardabarros delantero (Negro)",
+"MPR323-":"Guardabarros delantero (Blanco)",
 "MPR128SC":"BASE DE ASIENTOS",
 "MPR36SC":"PORTA TABLERO NUEVO (A) HOMOPOLÍMERO",
 "MPR562":"Cubrebarral (CELESTE)",
@@ -511,6 +512,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
