--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@ const productos = {
 "MPR12B":"BAULERA (B)",
 "MPR317-":"Guardabarros delantero (Negro)",
 "MPR323-":"Guardabarros delantero (Blanco)",
+"MPR210-":"Cachas Laterales [RM]",
+"MPR315-":"Cachas Laterales [RM]",
 "MPR128SC":"BASE DE ASIENTOS",
 "MPR36SC":"PORTA TABLERO NUEVO (A) HOMOPOLÍMERO",
 "MPR562":"Cubrebarral (CELESTE)",
@@ -512,6 +514,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
