--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@ const productos = {
 "AMBPM502N2-T":"ASIENTO MB M502N TR.",
 "ATRTR200EFI1-T":"ASIENTO RTR 200 EFI DELANTERO",
 "ATRTR200EFI-T":"ASIENTO RTR 200 EFI TRASERO",
+"AK450RALLY-T":"ASIENTO 450 RALLY",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -515,6 +516,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
