--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ const productos = {
 "94100T850000":"RELAY ARRANQUE (9356)",
 "1.20.26.01.03001":"Regulador (2647)",
 "96400K010001":"RELAY GUIÑOS",
-"94100J000002":"RELAY ARRANQUE",
+"94100J000002-INT":"RELAY ARRANQUE",
 "96200J410000":"BOBINA ALTA",
 "299064010000":"REGULADOR VOLTAJE",
 "45700P250000":"ABS",
@@ -517,6 +517,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
