--- a/index.html
+++ b/index.html
@@ -181,12 +181,14 @@ const productos = {
 "MPR530":"Porta optica Homo (NEGRO) BLITZ",
 "MPR534":"Guardabarro delantero Homo (NEGRO) BLITZ",
 "MPR525":"Escudo Homo (BLANCO) BLITZ",
+"MPR525-":"Escudo Homo (BLANCO) BLITZ",
 "MPR549":"Escudo Homo (BLANCO) con calco Slalom",
 "MPR521":"Cubrebarral Homo I/D (BLANCO) BLITZ",
 "MPR537":"Lateral Homo I/D (BLANCO) BLITZ",
 "MPR558":"Lateral Homo I/D (BLANCO) con calco Slalom",
 "MPR529":"Porta optica Homo (BLANCO) BLITZ",
 "MPR533":"Guardabarro delantero Homo (BLANCO) BLITZ",
+"MPR533-":"Guardabarro delantero Homo (BLANCO) BLITZ",
 "MPR528":"Escudo Homo (ROJO) BLITZ",
 "MPR551":"Escudo Homo (ROJO) con calco Slalom",
 "MPR524":"Cubrebarral Homo I/D (ROJO) BLITZ",
@@ -516,6 +518,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
