--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@ const productos = {
 "MPR410":"Laterales (Blancos)",
 "MPR409":"Laterales (Blancos)",
 "MPR321":"Cubre tanque (Blanco)",
+"MPR321-":"Cubre tanque (Blanco)",
 "MPR322":"Cubre tanque (Blanco)",
+"MPR322-":"Cubre tanque (Blanco)",
 "MPR323":"Guardabarros delantero (Blanco)",
 "MPR441":"Colín (arena)",
 "MPR442":"Porta opticas (arena)",
@@ -518,6 +520,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
