--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ const productos = {
 "MPR385":"Guardabarro delantero (NEGRO) ABS",
 "MPR386":"Lateral derecho (NEGRO) ABS",
 "MPR387":"Lateral izquierdo (NEGRO) ABS",
+"MPR387-":"Lateral izquierdo (NEGRO) ABS",
 "MPR216C":"Tapa y cuerpo de caja de herramientas mas cerradura skua 150",
 "FILT444":"FILTRO ARMADO (entada superior de aire + cuerpo de filtro + tapa filtro)",
 "MPR12B":"BAULERA (B)",
@@ -520,6 +521,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
