--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@ const productos = {
 "MPR411":"ASIENTO SKUA 125 X TREME",
 "AMS201-T":"ASIENTO MOTOMEL S2",
 "AMMAX110-T":"ASIENTO MAX 110",
+"ASJETX200-T":"ASIENTO JET X",
 "AMMAX110-TA":"ASIENTO MAX AMARILLO 110",
 "AMMAX110-TR":"ASIENTO MAX ROJO 110",
 "AMMAX110-TV":"ASIENTO MAX VIOLETA 110",
@@ -521,6 +522,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
