--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ const productos = {
 "MPR11":"GUARDABARROS TRASERO (A) BLITZ",
 "MPR394":"BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
 "MPR394-":"BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
+"MPR394SC":"BAJO ASIENTO (A) PLÁSTICOS NACIONALES",
 "MPR128":"BASE DE ASIENTOS",
 "MPR10":"POLLERA (B)",
 "MPR395":"POLLERA (A) PLÁSTICOS NACIONALES",
@@ -522,6 +523,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
