--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@ const productos = {
 "ATRTR200EFI1-T":"ASIENTO RTR 200 EFI DELANTERO",
 "ATRTR200EFI-T":"ASIENTO RTR 200 EFI TRASERO",
 "AK450RALLY-T":"ASIENTO 450 RALLY",
+"AK350R2-T":"ASIENTO KY350R TRASERO",
+"AK350R1-T":"ASIENTO KY350R DELANTERO",
 "MPR127.":"PP COPOLIMERO DE IMPACTO 16C12NA ESENTTIA / 2630PC PETROCUYO",
 "MPR218":"PP RANDOM 10R10C ESENTTIA",
 "MPR361":"PP HOMOPOLIMERO 11H01A ESENTTIA / SMD 6200 PETROCUYO",
@@ -524,6 +526,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
