--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@ const productos = {
 "MPR568":"Guardabarro delantero (CELESTE)",
 "MPR570":"Lateral I/D (CELESTE)",
 "MPR449-":"Colín (Rojo)",
+"MPR528-":"Escudo rojo Blitz con calco Start",
+"MPR564-":"Escudo celeste Blitz con calco Start",
+"MPR563-":"Escudo gris Blitz con calco Star",
+"MPR395R-":"Pollera (A) Blitz con calco roja Start",
+"MPR395C-":"Pollera (a) Blitz con calco celeste Start",
+"MPR395G-":"Pollera (A) Blitz con calco gris Start",
 "AMB11001-T":"ASIENTO MOTOMEL BLITZ",
 "AMB11002-T":"ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T":"ASIENTO MOTOMEL BLITZ PLUS",
@@ -526,6 +532,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
