--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@ const productos = {
 "MPR395R-":"Pollera (A) Blitz con calco roja Start",
 "MPR395C-":"Pollera (a) Blitz con calco celeste Start",
 "MPR395G-":"Pollera (A) Blitz con calco gris Start",
+"MPR9SC":"TAPA (B) DE CHASIS",
 "AMB11001-T":"ASIENTO MOTOMEL BLITZ",
 "AMB11002-T":"ASIENTO MOTOMEL BLITZ TUNNING",
 "AMB11003-T":"ASIENTO MOTOMEL BLITZ PLUS",
@@ -532,6 +533,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
