--- a/index.html
+++ b/index.html
@@ -277,6 +277,12 @@ const productos = {
 "MPR395R-":"Pollera (A) Blitz con calco roja Start",
 "MPR395C-":"Pollera (a) Blitz con calco celeste Start",
 "MPR395G-":"Pollera (A) Blitz con calco gris Start",
+"MPR528U":"Escudo rojo Blitz con calco Start unidad",
+"MPR564U":"Escudo celeste Blitz con calco Start unidad",
+"MPR563U":"Escudo gris Blitz con calco Start unidad",
+"MPR395RU":"Pollera (A) Blitz con calco roja Start unidad",
+"MPR395CU":"Pollera (a) Blitz con calco celeste Start unidad",
+"MPR395GU":"Pollera (A) Blitz con calco gris Start unidad",
 "MPR9SC":"TAPA (B) DE CHASIS",
 "AMB11001-T":"ASIENTO MOTOMEL BLITZ",
 "AMB11002-T":"ASIENTO MOTOMEL BLITZ TUNNING",
@@ -533,6 +539,7 @@ const productos = {
 
 </body>
 </html>
+
 
 
 
